objects/ssot__CaseUpdate__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseUpdate_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseUpdate_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>CaseUpdate_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>CaseUpdate_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Case Update Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousUpdateDateTime__c</fullName>
        <label>Previous Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedOwnerId__c</fullName>
        <label>Related Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedOwnerObject__c</fullName>
        <label>Related Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761226314_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseUpdate_LastModifiedById_map_User_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>CaseUpdate_LastModifiedById_map_User_rel</relationshipLabel>
        <relationshipName>rel_1697761226314_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761226439_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseUpdate_RelatedOwnerId_map_User_I_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>CaseUpdate_RelatedOwnerId_map_User_I_rel</relationshipLabel>
        <relationshipName>rel_1697761226439_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>